<resources>
    <string name="app_name">HoitNote</string>
    <string name="login_btn_hint">登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pattern_lock">手势解锁</string>
    <string name="traditional_lock">密码解锁</string>
    <string name="fingerprint_lock">指纹解锁</string>
    <string name="pattern_registration">绘制手势</string>
    <string name="traditional_registration">密码注册</string>
    <string name="fingerprint_registration">指纹功能无法开启</string>
    <string name="settings">设置</string>
    <string name="settings_title">设&#160;&#160;&#160;置</string>
    <string name="settings_theme">主&#160;&#160;&#160;题</string>
    <string name="settings_security">安&#160;&#160;&#160;全</string>
    <string name="settings_sync">同&#160;&#160;&#160;步</string>
    <string name="settings_recycle">回收站</string>
    <string name="setting_traditional">设置密码</string>
    <string name="setting_pattern">设置手势</string>
    <string name="setting_fingerprint">设置指纹</string>
    <string name="sweet_theme">甜蜜</string>
    <string name="default_theme">默认</string>
    <string name="right_arrow"></string>
    <string name="check_more">查看更多</string>
    <string name="account_name_hint">账户名</string>
    <string name="account_code_hint">账号</string>
    <string name="finger_print_icon"></string>
    <string name="sync_icon"></string>
    <string name="traditional_password_icon"></string>
    <string name="pattern_lock_icon"></string>
    <string name="theme_icon"></string>
    <string name="security_icon"></string>
    <string name="accout_information_title">信息</string>
    <string name="account_remain_money">结余:</string>
    <string name="account_income">收入:</string>
    <string name="account_outcome">支出:</string>
    <string name="account_transfer">转账:</string>
    <string name="arrow_left"></string>
    <string name="chart_cl_year">年</string>
    <string name="chart_cl_month">月</string>
    <string name="chart_cl_week">周</string>
    <string name="chart_cl_day">日</string>
    <string name="chart_cl_filter_hint">—查看方式—</string>
    <string name="confirm_hint">确认</string>
    <string name="selector_icon"></string>
    <string name="selector_hint">筛选</string>
    <string name="transition_name_card">transition_card</string>
    <string name="recycleIcon"></string>
    <string name="recycle_recover_hint">恢复</string>
    <string name="recycle_delete_hint">删除</string>
    <string name="recycle_select_all">全选</string>
    <string name="recycle_unselect_all">取消</string>
    <string name="empty_hint">空空如也</string>
    <string name="arrow_right"></string>
    <string name="clock_icon"></string>
    <string name="selector_level_hint">选择分类级别</string>
    <string name="selector_time_hint">选择时间范围</string>
    <string name="booking_money_hint">金额</string>
    <string name="booking_project_hint">项目</string>
    <string name="booking_remark">备注</string>
    <string name="booking_vendor">商家</string>
    <string name="booking_member">成员</string>
    <string name="booking_class1">一级分类</string>
    <string name="booking_class2">二级分类</string>
    <string name="booking_time">时间</string>
    <string name="booking_information">信息</string>
    <string name="booking_money">资金</string>
    <string name="booking_other">其它</string>
    <string name="booking_transfer_in">转入</string>
    <string name="booking_transfer_out">转出</string>
    <string name="booking_transfer_exchange"></string>
    <string name="add_tally">记一笔</string>
    <string name="recent_seven_hint">最&#160;&#160;&#160;近</string>
    <string name="circle_arrow_right"></string>
    <string name="delete">删除</string>
    <string name="tips_hint">提示</string>
    <string name="circle_chart_no_data">没有数据可以显示</string>
    <string name="datasync_normal_statue_hint">我要接受</string>
    <string name="datasync_send_hint">我要发送</string>
    <string name="datasync_connecting_hint">连接设备中…</string>
    <string name="datasync_receiving_hint">数据接受中…</string>
    <string name="datasync_received_hint">数据接受完成</string>
    <string name="close_icon">&#xf107;</string>
    <string name="datasync_sending_hint">数据发送中…</string>
    <string name="datasync_sended_hint">数据发送成功</string>
    <string name="circle_down_arrow"></string>

</resources>