<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="lockFragment"
            type="com.example.hoitnote.views.locks.LockFragment" />
    </data>

    <LinearLayout
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:gravity="center">

            <com.example.hoitnote.customviews.FontAwesome
                android:id="@+id/fingerprintLock"
                android:onClick="@{(v)->lockFragment.switchTheme(v)}"
                style="@style/HoitIcon"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finger_print_icon" />

            <com.example.hoitnote.customviews.FontAwesome
                android:id="@+id/patternLock"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{(v)->lockFragment.switchTheme(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HoitIcon"
                android:text="@string/pattern_lock_icon"/>

            <com.example.hoitnote.customviews.FontAwesome
                android:id="@+id/traditionalLock"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{(v)->lockFragment.switchTheme(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traditional_password_icon"
                style="@style/HoitIcon"/>

            <com.example.hoitnote.customviews.FontAwesome
                android:id="@+id/syncSettings"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{(v)->lockFragment.switchTheme(v)}"
                style="@style/HoitIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_icon"/>
        </LinearLayout>

    </LinearLayout>



</layout>