<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <GridLayout
        android:rowCount="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="false"
        tools:context=".views.settings.ThemeSettingActivity">

        <LinearLayout
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/upperContainer"
            android:background="?attr/colorAccent"
            android:layout_rowWeight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <com.example.hoitnote.customviews.FontAwesome
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/theme_icon"
                style="@style/HoitIcon"
                android:textSize="40sp"
                android:transitionName="themeIcon"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_theme"
                android:textAlignment="center"
                style="@style/HoitTitleText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayContainer"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="10"
            android:background="?attr/colorPrimary"
            tools:targetApi="lollipop">

            <Button
                android:id="@+id/defualtThemeBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:text="@string/default_theme"
                android:foreground="@drawable/ripple"
                android:textSize="15sp"
                android:onClick="changeTheme"
                android:background="@drawable/button_default_theme_setting"
                tools:targetApi="m" />

            <Button
                android:id="@+id/sweetThemeBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:foreground="@drawable/ripple"
                android:text="@string/sweet_theme"
                android:textSize="15sp"
                android:onClick="changeTheme"
                android:background="@drawable/button_sweet_theme_setting"
                tools:targetApi="m" />
        </LinearLayout>



    </GridLayout>
</layout>