<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <GridLayout
        android:rowCount="2"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="false"
        tools:context=".views.settings.ThemeSettingActivity">

        <LinearLayout
            android:layout_row="0"
            android:background="?attr/colorPrimaryDark"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <com.example.hoitnote.customviews.FontAwesome
                android:layout_height="50dp"
                android:layout_width="60dp"
                style="@style/HoitIcon"
                android:textSize="40sp"
                android:text="@string/security_icon"
                android:transitionName="securityIcon"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_security"
                android:textAlignment="center"
                style="@style/HoitTitleText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="10"
            android:background="?attr/colorPrimary"
            tools:targetApi="lollipop">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/passwordStylePanel"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            android:layout_height="400dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:onClick="setFingerPrint"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.example.hoitnote.customviews.FontAwesome
                        android:layout_margin="20dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:text="@string/finger_print_icon"
                        style="@style/HoitIcon" />

                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="?attr/textColorPrimary"
                        style="@style/HoitTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_fingerprint"/>
                </LinearLayout>


                <LinearLayout
                    android:background="?selectableItemBackground"
                    android:onClick="setPattern"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.example.hoitnote.customviews.FontAwesome
                        android:layout_margin="20dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        style="@style/HoitIcon"
                        android:text="@string/pattern_lock_icon"/>

                    <TextView
                        style="@style/HoitTitleText"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="?attr/textColorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_pattern"/>
                </LinearLayout>

                <LinearLayout
                    android:onClick="setTraditional"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.example.hoitnote.customviews.FontAwesome
                        android:layout_margin="20dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        style="@style/HoitIcon"
                        android:text="@string/traditional_password_icon" />

                    <TextView
                        style="@style/HoitTitleText"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="?attr/textColorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_traditional"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>
    <!--<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:elevation="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_smart_home_shield_64" />

                <ImageButton
                    android:elevation="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_smart_home_shield_64" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>-->

</layout>