<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="popupView"
            type="com.example.hoitnote.customviews.popups.AddAccountPopupView" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            style="@style/HoitPopupViewStyle">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:background="@drawable/edittext_round_outline"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:paddingStart="5dp"
                    android:drawableStart="@drawable/account_name_icon"
                    android:ems="10"
                    android:id="@+id/accountNameField"
                    android:singleLine="true"
                    android:hint="@string/account_name_hint"
                    android:drawablePadding="5dp"
                    android:text="@={popupView.accountName}"
                    android:drawableLeft="@drawable/account_name_icon"
                    android:paddingLeft="5dp" />

                <EditText
                    android:inputType="number"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/account_code_icon"
                    android:background="@drawable/edittext_round_outline"
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:singleLine="true"
                    android:id="@+id/accountCodeField"
                    android:hint="@string/account_code_hint"
                    android:paddingStart="5dp"
                    android:text="@={popupView.accountCode}"
                    android:drawableLeft="@drawable/account_code_icon"
                    android:paddingLeft="5dp" />

                <Button
                    android:background="@drawable/background_hoit_button"
                    android:id="@+id/addAccountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:text="@string/confirm_hint"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>